--- a/03-derivatives/derivatives_assignment_03.ipynb
+++ b/03-derivatives/derivatives_assignment_03.ipynb
@@ -101,7 +101,6 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "\n",
     "class LossAndDerivatives:\n",
     "    @staticmethod\n",
     "    def mse(X, Y, w):\n",
@@ -113,7 +112,7 @@
     "        Return : float\n",
     "            single number with MSE value of linear model (X.dot(w)) with no bias term\n",
     "            on the selected dataset.\n",
-    "\n",
+    "        \n",
     "        Comment: If Y is two-dimentional, average the error over both dimentions.\n",
     "        \"\"\"\n",
     "\n",
@@ -125,16 +124,15 @@
     "        X : numpy array of shape (`n_observations`, `n_features`)\n",
     "        Y : numpy array of shape (`n_observations`, `target_dimentionality`) or (`n_observations`,)\n",
     "        w : numpy array of shape (`n_features`, `target_dimentionality`) or (`n_features`,)\n",
-    "\n",
+    "                \n",
     "        Return: float\n",
     "            single number with MAE value of linear model (X.dot(w)) with no bias term\n",
     "            on the selected dataset.\n",
     "\n",
     "        Comment: If Y is two-dimentional, average the error over both dimentions.\n",
     "        \"\"\"\n",
-    "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "    \n",
+    "        return np.mean(np.abs(X.dot(w) - Y))\n",
     "\n",
     "    @staticmethod\n",
     "    def l2_reg(w):\n",
@@ -146,9 +144,8 @@
     "\n",
     "        Computes the L2 regularization term for the weight matrix w.\n",
     "        \"\"\"\n",
-    "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        \n",
+    "        return np.sum(w ** 2)\n",
     "\n",
     "    @staticmethod\n",
     "    def l1_reg(w):\n",
@@ -157,38 +154,52 @@
     "\n",
     "        Return : float\n",
     "            single number with sum of the absolute values of the weight matrix ( \\sum_{ij} |w_{ij}| )\n",
-    "\n",
+    "        \n",
     "        Computes the L1 regularization term for the weight matrix w.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        return np.sum(np.abs(w))\n",
     "\n",
     "    @staticmethod\n",
     "    def no_reg(w):\n",
     "        \"\"\"\n",
     "        Simply ignores the regularization\n",
     "        \"\"\"\n",
-    "        return 0.0\n",
-    "\n",
+    "        return 0.\n",
+    "    \n",
     "    @staticmethod\n",
     "    def mse_derivative(X, Y, w):\n",
     "        \"\"\"\n",
     "        X : numpy array of shape (`n_observations`, `n_features`)\n",
     "        Y : numpy array of shape (`n_observations`, `target_dimentionality`) or (`n_observations`,)\n",
     "        w : numpy array of shape (`n_features`, `target_dimentionality`) or (`n_features`,)\n",
-    "\n",
+    "        \n",
     "        Return : numpy array of same shape as `w`\n",
     "\n",
     "        Computes the MSE derivative for linear regression (X.dot(w)) with no bias term\n",
     "        w.r.t. w weight matrix.\n",
-    "\n",
+    "        \n",
     "        Please mention, that in case `target_dimentionality` > 1 the error is averaged along this\n",
     "        dimension as well, so you need to consider that fact in derivative implementation.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        n_observations = X.shape[0]\n",
+    "        target_dimentionality = Y.shape[1] if (len(Y.shape) > 1) else 1\n",
+    "\n",
+    "        predictions = np.dot(X, w)\n",
+    "        error_for_derivative = predictions - Y\n",
+    "\n",
+    "        if (len(Y.shape) == 1):\n",
+    "            Y = Y[:, np.newaxis]\n",
+    "\n",
+    "        if (len(X.shape) == 1):\n",
+    "            X = X[:, np.newaxis]\n",
+    "\n",
+    "        if (len(w.shape) == 1):\n",
+    "            w = w[:, np.newaxis]\n",
+    "\n",
+    "        # Calculate gradient\n",
+    "        return 2 * np.dot(X.T, error_for_derivative) / (Y.shape[0] * Y.shape[1])\n",
     "\n",
     "    @staticmethod\n",
     "    def mae_derivative(X, Y, w):\n",
@@ -196,18 +207,34 @@
     "        X : numpy array of shape (`n_observations`, `n_features`)\n",
     "        Y : numpy array of shape (`n_observations`, `target_dimentionality`) or (`n_observations`,)\n",
     "        w : numpy array of shape (`n_features`, `target_dimentionality`) or (`n_features`,)\n",
-    "\n",
+    "        \n",
     "        Return : numpy array of same shape as `w`\n",
     "\n",
     "        Computes the MAE derivative for linear regression (X.dot(w)) with no bias term\n",
     "        w.r.t. w weight matrix.\n",
-    "\n",
+    "        \n",
     "        Please mention, that in case `target_dimentionality` > 1 the error is averaged along this\n",
     "        dimension as well, so you need to consider that fact in derivative implementation.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        n_observations = X.shape[0]\n",
+    "        target_dimentionality = Y.shape[1] if (len(Y.shape) > 1) else 1\n",
+    "\n",
+    "        predictions = np.dot(X, w)\n",
+    "        error = Y - predictions\n",
+    "        error_sign = np.sign(predictions - Y)\n",
+    "\n",
+    "        if (len(Y.shape) == 1):\n",
+    "            Y = Y[:, np.newaxis]\n",
+    "\n",
+    "        if (len(X.shape) == 1):\n",
+    "            X = X[:, np.newaxis]\n",
+    "\n",
+    "        if (len(w.shape) == 1):\n",
+    "            w = w[:, np.newaxis]\n",
+    "\n",
+    "        # Calculate gradient\n",
+    "        return np.dot(X.T, error_sign) / (Y.shape[0] * Y.shape[1])\n",
     "\n",
     "    @staticmethod\n",
     "    def l2_reg_derivative(w):\n",
@@ -219,8 +246,10 @@
     "        Computes the L2 regularization term derivative w.r.t. the weight matrix w.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        regularization_lambda = 1\n",
+    "\n",
+    "        # Calculate gradient\n",
+    "        return 2 * regularization_lambda * w\n",
     "\n",
     "    @staticmethod\n",
     "    def l1_reg_derivative(w):\n",
@@ -233,15 +262,17 @@
     "        Computes the L1 regularization term derivative w.r.t. the weight matrix w.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        return\n",
+    "        regularization_lambda = 1\n",
+    "\n",
+    "        # Calculate gradient\n",
+    "        return regularization_lambda * np.sign(w)\n",
     "\n",
     "    @staticmethod\n",
     "    def no_reg_derivative(w):\n",
     "        \"\"\"\n",
     "        Simply ignores the derivative\n",
     "        \"\"\"\n",
-    "        return np.zeros_like(w)"
+    "        return np.zeros_like(w)\n"
    ]
   },
   {
@@ -554,9 +585,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_research_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -568,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
