--- a/04-power-iteration/power_method_assignment0_04.ipynb
+++ b/04-power-iteration/power_method_assignment0_04.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,18 @@
     "    eigenvalue: float – dominant eigenvalue estimation after `num_steps` steps\n",
     "    eigenvector: np.ndarray – corresponding eigenvector estimation\n",
     "    \"\"\"\n",
-    "    ### YOUR CODE HERE\n",
+    "    r_0 = np.ones(data.shape[0], dtype=float)\n",
     "\n",
-    "    pass"
+    "    # result[0] - eigenvalue\n",
+    "    # result[1] - eigenvector\n",
+    "    result = [1., r_0]\n",
+    "\n",
+    "    for k in range(num_steps):\n",
+    "        temp = np.dot(data, result[1])\n",
+    "        result[0] = np.sum(result[1] * temp) / np.sum(result[1] ** 2)\n",
+    "        result[1] = temp / np.sqrt(np.sum(temp ** 2))\n",
+    "\n",
+    "    return float(result[0]), result[1]"
    ]
   },
   {
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,15 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seems fine! Copy function `get_dominant_eigenvalue_and_eigenvector` to the .py file and submit your solution to the contest!\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(1000):\n",
     "    size = np.random.choice(np.arange(2, 5))\n",
     "    data = np.random.randn(size, size)\n",
     "    data = data.T.dot(data)\n",
     "    a0, b0 = get_dominant_eigenvalue_and_eigenvector(data, 1000)\n",
+    "    \n",
     "    assert (\n",
     "        type(a0) == float\n",
     "    ), \"Return type for eigenvalue is not Python float (please, note, numpy.float64 is a different type)\"\n",
@@ -139,9 +157,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_research_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
