--- a/05-bagging-and-oob/assignment_bagging_and_oob.ipynb
+++ b/05-bagging-and-oob/assignment_bagging_and_oob.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "31ecde34",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "06110580",
    "metadata": {},
    "outputs": [],
@@ -53,8 +53,8 @@
     "        '''\n",
     "        self.indices_list = []\n",
     "        data_length = len(data)\n",
-    "        for bag in range(self.num_bags):\n",
-    "            \n",
+    "        for _ in range(self.num_bags):\n",
+    "            self.indices_list.append(np.random.randint(0, data_length - 1, size=data_length))\n",
     "        \n",
     "    def fit(self, model_constructor, data, target):\n",
     "        '''\n",
@@ -63,19 +63,19 @@
     "        \n",
     "        example:\n",
     "        \n",
-    "        bagging_regressor = SimplifiedBaggingRegressor(num_bags=10, oob=True)\n",
-    "        bagging_regressor.fit(LinearRegression, X, y)\n",
+    "            bagging_regressor = SimplifiedBaggingRegressor(num_bags=10, oob=True)\n",
+    "            bagging_regressor.fit(LinearRegression, X, y)\n",
     "        '''\n",
     "        self.data = None\n",
     "        self.target = None\n",
     "        self._generate_splits(data)\n",
-    "        assert len(set(list(map(len, self.indices_list)))) == 1, 'All bags should be of the same length!'\n",
-    "        assert list(map(len, self.indices_list))[0] == len(data), 'All bags should contain `len(data)` number of elements!'\n",
+    "        assert len(set(list(map(len, self.indices_list)))) == 1,        'All bags should be of the same length!'\n",
+    "        assert list(map(len, self.indices_list))[0] == len(data),       'All bags should contain `len(data)` number of elements!'\n",
     "        self.models_list = []\n",
     "        for bag in range(self.num_bags):\n",
     "            model = model_constructor()\n",
-    "            data_bag, target_bag = # Your Code Here\n",
-    "            self.models_list.append(model.fit(data_bag, target_bag)) # store fitted models here\n",
+    "            data_bag, target_bag = data[self.indices_list[bag]], target[self.indices_list[bag]]\n",
+    "            self.models_list.append(model.fit(data_bag, target_bag))    # store fitted models here\n",
     "        if self.oob:\n",
     "            self.data = data\n",
     "            self.target = target\n",
@@ -84,15 +84,26 @@
     "        '''\n",
     "        Get average prediction for every object from passed dataset\n",
     "        '''\n",
-    "        # Your code here\n",
+    "        predictions = []\n",
+    "        for model in self.models_list:\n",
+    "            predictions.append(model.predict(data))\n",
+    "\n",
+    "        return np.mean(predictions, axis=0)\n",
     "    \n",
     "    def _get_oob_predictions_from_every_model(self):\n",
     "        '''\n",
     "        Generates list of lists, where list i contains predictions for self.data[i] object\n",
     "        from all models, which have not seen this object during training phase\n",
     "        '''\n",
-    "        list_of_predictions_lists = [[] for _ in range(len(self.data))]\n",
-    "        # Your Code Here\n",
+    "        data_length = len(self.data)\n",
+    "        list_of_predictions_lists = [[] for _ in range(data_length)]\n",
+    "        \n",
+    "        for bag in range(self.num_bags):\n",
+    "            predictions = []\n",
+    "            for index in range(data_length):\n",
+    "                if index not in self.indices_list[bag]:\n",
+    "                    predictions.append((self.models_list[bag]).predict(self.data[index].reshape(1, -1)))\n",
+    "                list_of_predictions_lists[index] = predictions\n",
     "        \n",
     "        self.list_of_predictions_lists = np.array(list_of_predictions_lists, dtype=object)\n",
     "    \n",
@@ -102,15 +113,23 @@
     "        If object has been used in all bags on training phase, return None instead of prediction\n",
     "        '''\n",
     "        self._get_oob_predictions_from_every_model()\n",
-    "        self.oob_predictions = # Your Code Here\n",
-    "        \n",
+    "        self.oob_predictions = []\n",
+    "        data_length = len(self.data)\n",
+    "\n",
+    "        for i in range(data_length):\n",
+    "            predictions = self.list_of_predictions_lists[i]\n",
+    "            if len(predictions) == 0:\n",
+    "                self.oob_predictions.append(None)\n",
+    "            else:\n",
+    "                self.oob_predictions.append(np.mean(predictions))\n",
     "        \n",
     "    def OOB_score(self):\n",
     "        '''\n",
     "        Compute mean square error for all objects, which have at least one prediction\n",
     "        '''\n",
     "        self._get_averaged_oob_predictions()\n",
-    "        return # Your Code Here"
+    "\n",
+    "        return np.nanmean((self.target - self.oob_predictions) ** 2)"
    ]
   },
   {
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "eaa2e710",
    "metadata": {},
    "outputs": [],
@@ -142,10 +161,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "84c94a8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/100 [00:01<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09639568030592705 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "OOB error for linear dependency should be also close to zero!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     oob_score \u001b[39m=\u001b[39m bagging_regressor\u001b[39m.\u001b[39mOOB_score()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mprint\u001b[39m(oob_score, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39massert\u001b[39;00m oob_score \u001b[39m<\u001b[39m \u001b[39m1e-6\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOOB error for linear dependency should be also close to zero!\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mabs\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m         np\u001b[39m.\u001b[39mmean(\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m             \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mlen\u001b[39m, bagging_regressor\u001b[39m.\u001b[39mlist_of_predictions_lists))\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m         ) \u001b[39m/\u001b[39m bagging_regressor\u001b[39m.\u001b[39mnum_bags \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39mexp(\u001b[39m1\u001b[39m)) \u001b[39m<\u001b[39m \u001b[39m0.1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mProbability of missing a bag should be close to theoretical value!\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mSimple tests done!\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: OOB error for linear dependency should be also close to zero!"
+     ]
+    }
+   ],
    "source": [
     "for _ in tqdm(range(100)):\n",
     "    X = np.random.randn(2000, 10)\n",
@@ -156,6 +209,7 @@
     "    assert np.mean((predictions - y)**2) < 1e-6, 'Linear dependency should be fitted with almost zero error!'\n",
     "    assert bagging_regressor.oob, 'OOB feature must be turned on'\n",
     "    oob_score = bagging_regressor.OOB_score()\n",
+    "    print(oob_score, \"\\n\")\n",
     "    assert oob_score < 1e-6, 'OOB error for linear dependency should be also close to zero!'\n",
     "    assert abs(\n",
     "        np.mean(\n",
@@ -251,9 +305,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_research"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
