--- a/05-bagging-and-oob/assignment_bagging_and_oob.ipynb
+++ b/05-bagging-and-oob/assignment_bagging_and_oob.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "06110580",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "        self.indices_list = []\n",
     "        data_length = len(data)\n",
     "        for _ in range(self.num_bags):\n",
-    "            self.indices_list.append(np.random.randint(0, data_length - 1, size=data_length))\n",
+    "            self.indices_list.append(np.random.randint(0, data_length, data_length))\n",
     "        \n",
     "    def fit(self, model_constructor, data, target):\n",
     "        '''\n",
@@ -98,12 +98,13 @@
     "        data_length = len(self.data)\n",
     "        list_of_predictions_lists = [[] for _ in range(data_length)]\n",
     "        \n",
-    "        for bag in range(self.num_bags):\n",
+    "        for index in range(data_length):\n",
     "            predictions = []\n",
-    "            for index in range(data_length):\n",
+    "            for bag in range(self.num_bags):\n",
     "                if index not in self.indices_list[bag]:\n",
-    "                    predictions.append((self.models_list[bag]).predict(self.data[index].reshape(1, -1)))\n",
-    "                list_of_predictions_lists[index] = predictions\n",
+    "                    predictions.append(float((self.models_list[bag]).predict(self.data[index].reshape(1, -1))))\n",
+    "            \n",
+    "            list_of_predictions_lists[index] = predictions\n",
     "        \n",
     "        self.list_of_predictions_lists = np.array(list_of_predictions_lists, dtype=object)\n",
     "    \n",
@@ -128,8 +129,10 @@
     "        Compute mean square error for all objects, which have at least one prediction\n",
     "        '''\n",
     "        self._get_averaged_oob_predictions()\n",
-    "\n",
-    "        return np.nanmean((self.target - self.oob_predictions) ** 2)"
+    "        squared_errors = [(true_val - pred) ** 2 for true_val, pred in zip(self.target, self.oob_predictions) if pred is not None]\n",
+    "        mean_squared_error = np.mean(squared_errors)\n",
+    "        \n",
+    "        return mean_squared_error"
    ]
   },
   {
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 39,
    "id": "eaa2e710",
    "metadata": {},
    "outputs": [],
@@ -161,41 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "id": "84c94a8b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:01<?, ?it/s]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af37a1a1099344f78dde0dbc4f7b9307",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09639568030592705 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "OOB error for linear dependency should be also close to zero!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     oob_score \u001b[39m=\u001b[39m bagging_regressor\u001b[39m.\u001b[39mOOB_score()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mprint\u001b[39m(oob_score, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39massert\u001b[39;00m oob_score \u001b[39m<\u001b[39m \u001b[39m1e-6\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOOB error for linear dependency should be also close to zero!\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mabs\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m         np\u001b[39m.\u001b[39mmean(\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m             \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mlen\u001b[39m, bagging_regressor\u001b[39m.\u001b[39mlist_of_predictions_lists))\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m         ) \u001b[39m/\u001b[39m bagging_regressor\u001b[39m.\u001b[39mnum_bags \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39mexp(\u001b[39m1\u001b[39m)) \u001b[39m<\u001b[39m \u001b[39m0.1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mProbability of missing a bag should be close to theoretical value!\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/05-bagging-and-oob/assignment_bagging_and_oob.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mSimple tests done!\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAssertionError\u001b[0m: OOB error for linear dependency should be also close to zero!"
+      "Simple tests done!\n"
      ]
     }
    ],
@@ -209,7 +200,6 @@
     "    assert np.mean((predictions - y)**2) < 1e-6, 'Linear dependency should be fitted with almost zero error!'\n",
     "    assert bagging_regressor.oob, 'OOB feature must be turned on'\n",
     "    oob_score = bagging_regressor.OOB_score()\n",
-    "    print(oob_score, \"\\n\")\n",
     "    assert oob_score < 1e-6, 'OOB error for linear dependency should be also close to zero!'\n",
     "    assert abs(\n",
     "        np.mean(\n",
@@ -229,10 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "0cfd3a21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64267d2f596145de9dd63e9bd7fa5d06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medium tests done!\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in tqdm(range(10)):\n",
     "    X = np.random.randn(200, 150)\n",
@@ -262,10 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "8f929d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b58e72126c94cd299e1c8b20ced94ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complex tests done!\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in tqdm(range(10)):\n",
     "    X = np.random.randn(2000, 15)\n",
@@ -284,10 +318,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "af170ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0012205588285576496"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(\n",
     "            list(map(len, bagging_regressor.list_of_predictions_lists))\n",
