--- a/07-mnist-classification/assignment_mnist.ipynb
+++ b/07-mnist-classification/assignment_mnist.ipynb
@@ -97,8 +97,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating model instance\n",
-    "model = None # your code here"
+    "class MyMNISTModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MyMNISTModel, self).__init__()\n",
+    "        self.layer1 = nn.Linear(28 * 28, 256)\n",
+    "        self.layer2 = nn.Linear(256, 128)\n",
+    "        self.layer3 = nn.Linear(128, 64)\n",
+    "        self.layer4 = nn.Linear(64, 10)\n",
+    "    \n",
+    "    def forward(self, data):\n",
+    "        data = data.view(-1, 28 * 28)\n",
+    "        data = F.relu(self.layer1(data))\n",
+    "        data = F.relu(self.layer2(data))\n",
+    "        data = F.relu(self.layer3(data))\n",
+    "        data = self.layer4(data)\n",
+    "\n",
+    "        return F.log_softmax(data, dim=1)\n",
+    "    \n",
+    "    def train_model(self, train_data_loader, loss_function, optimizer, num_epochs):\n",
+    "        self.loss = []\n",
+    "        for epoch in range(num_epochs):\n",
+    "            running_loss = 0.0\n",
+    "            for i, data in enumerate(train_data_loader, 0):\n",
+    "                inputs, targets = data\n",
+    "                optimizer.zero_grad()\n",
+    "                outputs = model.forward(inputs)\n",
+    "                loss = loss_function(outputs, targets)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                running_loss += loss.item()\n",
+    "            self.loss.append(running_loss / len(train_data_loader))    \n",
+    "            \n",
+    "model = MyMNISTModel()"
    ]
   },
   {
@@ -150,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "model.train_model(train_data_loader, nn.CrossEntropyLoss(), torch.optim.SGD(model.parameters(), lr=0.01, momentum=0.9), 10)"
    ]
   },
   {
@@ -260,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/girafe-ai/ml-course/23s_dd_ml/homeworks/hw07_mnist_classification/hw07_data_dict.npy"
+    "# !wget https://raw.githubusercontent.com/girafe-ai/ml-course/23s_dd_ml/homeworks/hw07_mnist_classification/hw07_data_dict.npy"
    ]
   },
   {
