--- a/09-unknown-dependency/assignment_final.ipynb
+++ b/09-unknown-dependency/assignment_final.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,15 @@
     "import json\n",
     "\n",
     "import numpy as np\n",
+    "import torch\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
+    "from torch.utils.data import TensorDataset, DataLoader"
    ]
   },
   {
@@ -48,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_open_data.npy -O hw_final_open_data.npy\n",
-    "!wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_open_target.npy -O hw_final_open_data.npy"
+    "# !wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_open_data.npy -O hw_final_open_data.npy\n",
+    "# !wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_open_target.npy -O hw_final_open_data.npy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(560, 7) (560,)\n"
+     ]
+    }
+   ],
    "source": [
-    "train_x, valid_x, train_y, valid_y = train_test_split(data, target, test_size=0.3)"
+    "train_x, valid_x, train_y, valid_y = train_test_split(data, target, test_size=0.3)\n",
+    "\n",
+    "print(train_x.shape, train_y.shape)"
    ]
   },
   {
@@ -96,9 +110,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train mse =\t 0.10314\n",
+      "validation mse = 0.32917\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/andrey_kirkicha/ML/09-unknown-dependency/assignment_final.ipynb Cell 10\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/09-unknown-dependency/assignment_final.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=34'>35</a>\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlosses\u001b[39m.\u001b[39mappend(running_loss \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(train_loader))\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/09-unknown-dependency/assignment_final.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=36'>37</a>\u001b[0m model \u001b[39m=\u001b[39m MyModel(train_x\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m])\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/09-unknown-dependency/assignment_final.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m train_data_loader \u001b[39m=\u001b[39m DataLoader(TensorDataset(train_x, train_y), batch_size\u001b[39m=\u001b[39m\u001b[39m32\u001b[39m, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andrey_kirkicha/ML/09-unknown-dependency/assignment_final.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=38'>39</a>\u001b[0m model\u001b[39m.\u001b[39mfit(train_data_loader, nn\u001b[39m.\u001b[39mCrossEntropyLoss(), torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mSGD(model\u001b[39m.\u001b[39mparameters(), lr\u001b[39m=\u001b[39m\u001b[39m0.01\u001b[39m, momentum\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m), \u001b[39m10\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/dataset.py:204\u001b[0m, in \u001b[0;36mTensorDataset.__init__\u001b[0;34m(self, *tensors)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39mtensors: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 204\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mall\u001b[39;49m(tensors[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39;49m) \u001b[39m==\u001b[39;49m tensor\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39;49m) \u001b[39mfor\u001b[39;49;00m tensor \u001b[39min\u001b[39;49;00m tensors), \u001b[39m\"\u001b[39m\u001b[39mSize mismatch between tensors\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    205\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtensors \u001b[39m=\u001b[39m tensors\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/utils/data/dataset.py:204\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39mtensors: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 204\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mall\u001b[39m(tensors[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39;49m) \u001b[39m==\u001b[39m tensor\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m) \u001b[39mfor\u001b[39;00m tensor \u001b[39min\u001b[39;00m tensors), \u001b[39m\"\u001b[39m\u001b[39mSize mismatch between tensors\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    205\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtensors \u001b[39m=\u001b[39m tensors\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "rf = RandomForestRegressor()\n",
     "rf.fit(train_x, train_y)\n",
@@ -107,7 +143,38 @@
     "    f'train mse =\\t {mean_squared_error(np.round(rf.predict(train_x), 2), np.round(train_y)):.5f}',\n",
     "    f'validation mse = {mean_squared_error(np.round(rf.predict(valid_x)), np.round(valid_y)):.5f}',\n",
     "    sep='\\n'\n",
-    ")"
+    ")\n",
+    "\n",
+    "class MyModel(nn.Module):\n",
+    "    def __init__(self, data_length):\n",
+    "        super(MyModel, self).__init__()\n",
+    "        self.layer1 = nn.Linear(data_length, 300)\n",
+    "        self.layer2 = nn.Linear(300, 100)\n",
+    "        self.layer3 = nn.Linear(100, 1)\n",
+    "    \n",
+    "    def forward(self, data):\n",
+    "        data = F.relu(self.layer1(data))\n",
+    "        data = F.relu(self.layer2(data))\n",
+    "        data = self.layer3(data)\n",
+    "\n",
+    "        return F.log_softmax(data, dim=1)\n",
+    "    \n",
+    "    def fit(self, train_loader, loss_function, optimizer, num_epochs):\n",
+    "        self.losses = []\n",
+    "        for epoch in range(num_epochs):\n",
+    "            running_loss = 0.0\n",
+    "            for inputs, targets in train_loader:\n",
+    "                optimizer.zero_grad()\n",
+    "                outputs = self(inputs)\n",
+    "                loss = loss_function(outputs, targets)\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                running_loss += loss.item()\n",
+    "            self.losses.append(running_loss / len(train_loader))\n",
+    "\n",
+    "model = MyModel(train_x.shape[1])\n",
+    "train_data_loader = DataLoader(TensorDataset(train_x, train_y), batch_size=32, shuffle=True)\n",
+    "model.fit(train_data_loader, nn.CrossEntropyLoss(), torch.optim.SGD(model.parameters(), lr=0.01, momentum=0.9), 10)"
    ]
   },
   {
@@ -120,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_closed_data.npy -O hw_final_closed_data.npy"
+    "# !wget https://raw.githubusercontent.com/girafe-ai/ml-course/23f_yandex_ml_trainings/homeworks/assignment_final/hw_final_closed_data.npy -O hw_final_closed_data.npy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved to `submission_dict_final_p01.npy`\n"
+     ]
+    }
+   ],
    "source": [
     "# do not change the code in the block below\n",
     "# __________start of block__________\n",
@@ -344,9 +419,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3_research"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -358,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
